--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "framer-motion": "^11.2.10",
+    "next": "^14.2.3",
     "react": "18",
     "react-dom": "18"
   },
