--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lama-dev-portfolio-starter",
+  "name": "newportfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.2.10",
-    "next": "^14.2.3",
-    "react": "18",
-    "react-dom": "18"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "@types/node": "20.12.2",
-    "@types/react": "18.2.73",
-    "autoprefixer": "10.0.1",
-    "eslint": "8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "8",
-    "tailwindcss": "3.3.0"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
